@@ -260,15 +260,26 @@ require([
         type: 'button',
         onClick: function () {
 
+            // merge start_date and start_time
+            var start_datetime_value = start_dateTextBox.value;
+            start_datetime_value.clearTime();
+            start_datetime_value.setHours(start_time_timeTextBox.value.getHours());
+            start_datetime_value.setMinutes(start_time_timeTextBox.value.getMinutes());
+            start_datetime_value.setSeconds(start_time_timeTextBox.value.getSeconds());
+
+            // merge end_date and end_time
+            var end_datetime_value = end_dateTextBox.value;
+            end_datetime_value.clearTime();
+            end_datetime_value.setHours(end_time_timeTextBox.value.getHours());
+            end_datetime_value.setMinutes(end_time_timeTextBox.value.getMinutes());
+            end_datetime_value.setSeconds(end_time_timeTextBox.value.getSeconds());
 
             submitForm({
                 dialog: dialog,
                 form: vacation_form,
                 additional_data: {
-                    start_date: start_dateTextBox.value.toUTCString(),
-                    end_date: end_dateTextBox.value.toUTCString(),
-                    start_time: start_time_timeTextBox.value.toUTCString(),
-                    end_time: end_time_timeTextBox.value.toUTCString(),
+                    start: start_datetime_value.toUTCString(),
+                    end: end_datetime_value.toUTCString(),
                     {% if mode == 'UPDATE' %}
                         vacation_id: '{{ vacation.id }}',
                     {% endif %}
